--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
       "react-app/jest"
     ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "not ie 11",
+    "not dead",
+    "not chrome 49"
     ],
     "development": [
       "last 1 chrome version",
