--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -20,7 +20,7 @@ phases:
       nodejs: 14
     commands:
       - echo installing . . .
-      - npm install
+      - yarn install
   pre_build:
     commands:
       - echo Not Running tests . . .
@@ -29,8 +29,7 @@ phases:
   build:
     commands:
       - echo Starting build . . .
-      - npm cache clean --force
-      - npm run build
+      - yarn run build
 
 artifacts:
   files:
