--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.16",
     "react-scripts": "4.0.3",
-    "web-vitals": "^2.1.0"
+    "standard": "^16.0.3",
+    "web-vitals": "^2.1.0",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,13 +25,11 @@
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
-      "not ie 11",
-    "not dead",
-    "not chrome 49"
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
