--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "kettling",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "homepage": ".",
   "dependencies": {
     "cra-template": "1.1.2",
     "deck.gl": "^8.5.5",
