--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ env:
 
     parameter-store:
     REACT_APP_MAP_LEAFLET_KEY: REACT_APP_MAP_LEAFLET_KEY
-    REACT_APP_MAP_BOX_STYLE_ID: "${REACT_APP_MAP_BOX_STYLE_ID}"
+    REACT_APP_MAP_BOX_STYLE_ID: REACT_APP_MAP_BOX_STYLE_ID
 
   exported-variables:
     - REACT_APP_MAP_LEAFLET_KEY
