--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ version: 2
 updates:
   
   # Enable version updates for npm
-  - package-ecosystem: "yarn"
+  - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
     directory: "/"
     # Check the npm registry for updates every day (weekdays)
@@ -13,4 +13,4 @@ updates:
       interval: "weekly"
      # Labels on pull requests for security and version updates
     labels:
-      - "yarn dependencies"
+      - "npm dependencies"
