--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,6 +22,7 @@ phases:
   build:
     commands:
       - echo Starting build . . .
+      - NODE_OPTIONS="--max-old-space-size=8192"
       - yarn run build
 artifacts:
   files:
@@ -32,3 +33,5 @@ artifacts:
 cache:
   paths:
     - /root/.npm/**/*
+
+
